kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  personal-portfolio
spec:
  selector:
    app:  personal-portfolio
  type:  LoadBalancer
  ports:
  - name:  portfolio-service-port
    port:  80
    targetPort:  80
    protocol: TCP
